gitops/pod-agent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-agent
  labels:
    app.kubernetes.io/name: pod-agent
