gitops/pod-agent/discord-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-agent-discord-bot
  namespace: pod-agent
  labels:
    app.kubernetes.io/name: pod-agent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pod-agent-discord-bot
  template:
    metadata:
      labels:
        app: pod-agent-discord-bot
    spec:
      nodeSelector:
        kubernetes.io/hostname: homelab-01
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: bot
          image: registry.rupan.dev/apps/pod-agent@sha256:6a31496b372b69c3847c20cf1859df625e8c3b47e8eef2c4009fa7297264b2e2  # yamllint disable-line rule:line-length
          imagePullPolicy: IfNotPresent
          args:
            - discord-bot
            - run
            - --shop
            - distrojeff
          workingDir: /data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: home
              mountPath: /home/podagent
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pod-agent-data
        - name: home
          emptyDir: {}
        - name: tmp
          emptyDir: {}
